# TEFCtrl_DMstm32h7_template

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  README.md  STM32H723XG_FLASH.ld  TEFCtrl_DMstm32H7_template.ioc  tmpclaude-ff89-cwd  代码规范检查报告.md
.claude/: settings.local.json
Core/Inc/: main.h  spi.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  usart.h
Core/Src/: adc.c  fdcan.c  gpio.c  main.c  main.cpp  octospi.c  spi.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  syscalls.c  sysmem.c  tim.c  usart.c
MDK-ARM/: TEFCtrl_DMstm32H7_template.uvguix.123  TEFCtrl_DMstm32H7_template.uvoptx  TEFCtrl_DMstm32H7_template.uvprojx  Test.uvguix.123  Test.uvoptx  startup_stm32h723xx.lst  startup_stm32h723xx.s
MDK-ARM/RTE/_TEFCtrl_DMstm32H7_template/: RTE_Components.h
MDK-ARM/Test/: TEFCtrl_DMstm32H7_template.axf  TEFCtrl_DMstm32H7_template.build_log.htm  TEFCtrl_DMstm32H7_template.hex  TEFCtrl_DMstm32H7_template.htm  TEFCtrl_DMstm32H7_template.lnp  TEFCtrl_DMstm32H7_template.map  TEFCtrl_DMstm32H7_template_TEFCtrl_DMstm32H7_template.dep  Test.axf  Test.build_log.htm  Test.hex  Test.htm  Test.lnp  Test.map  Test_Test.dep  adc.crf  adc.d  bsp_fdcan.d  bsp_usart.d  delay.d  dm_motor_ctrl.d  dm_motor_drv.d  dma.crf  dma.d  fdcan.crf  fdcan.d  gpio.crf  gpio.d  main.crf  main.d  math.d  memorymap.crf  memorymap.d  motor_task.d  octospi.crf  octospi.d  pid.d  pid_test_app.d  ringbuffer.d  scheduler.d  spi.crf  (+89 more)
application/: sa
application/app/: DM电机CAN通信控制手册.md
application/app/algorithm/: user_lib.h
application/app/algorithm/Mahony/: MahonyAHRS.c
application/app/algorithm/PID/: pid.c  pid.h  pid_plus.c  pid_plus.h  pid_test_app.c  pid_test_app.h
application/app/algorithm/_imu/: QuaternionEKF.c  algorithm.c  algorithm.h  controller.c  kalman_filter.c  kalman_filter.h  user_lib.h
application/app/algorithm/math/: math.c  math.h
application/app/motor/dji_motor/: dji_motor.cpp  dji_motor.h  motor_def.h  snail_c615.cpp  snail_c615.h
application/app/motor/dm_motor/: dm_motor.cpp  dm_motor.h  dm_motor_ctrl.c  dm_motor_ctrl.h  dm_motor_drv.h
application/app/remote/: Readme.md  et16s_wbus.rar  remoter_uart.c  remoter_uart.h
application/app/ringbuffer/: ringbuffer.c  ringbuffer.h  ringbuffer_test.c  ringbuffer_test.h
application/bsp/: bsp_system.h  typedef.h
application/bsp/can/: bsp_fdcan.c  bsp_fdcan.h
application/bsp/delay/: delay.h
application/bsp/usart/: bsp_usart.cpp  bsp_usart.h
application/task/: imu_task.c  imu_task.h  imu_temp_ctrl.c  imu_temp_ctrl.h  motor_task.cpp  motor_task.h  uart_task.cpp  uart_task.h
application/task/simple_os/: README.md  scheduler.cpp  scheduler.h
cmake/stm32cubemx/: CMakeLists.txt
